--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -7,6 +6,6 @@
 	<title>Nothing At Here</title>
 </head>
 <body>
-	<h1>Welcome!</h1>
+	<h1>hello world</h1>
 </body>
 </html>
