--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Nothing At Here</title>
+	<style type="text/css">
+		body{
+			background: pink;
+		}
+	</style>
 </head>
 <body>
-	<h1>hello world</h1>
+	<h1>Mày là thằng con ông Trung đúng không?</h1>
 </body>
 </html>
