--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Nothing At Here</title>
 	<style type="text/css">
 		body{
-			background: pink;
+			background: lightcyan;
 		}
 		h1{
 			text-align: center;
