--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Nothing At Here</title>
+	<link rel="stylesheet" href="style/style.css">
 	<style type="text/css">
-		body{
-			background: lightcyan;
-		}
-		h1{
+		.button {
+			background-color: #4CAF50; /* Green */
+			border: none;
+			color: white;
+			padding: 15px 32px;
 			text-align: center;
-		}
+			text-decoration: none;
+			display: inline-block;
+			font-size: 16px;
+			}
 	</style>
 </head>
 <body>
-	<h1>Hello world</h1>
+	<script src="js/main.js"></script>
+	<button id="btn_1">Có, chắc chắn</button>
+	<button id="btn_2">Không, dĩ nhiên!</button>
 </body>
 </html>
