Add index.html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Nothing At Here</title>
-	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="style.css">
 	<style type="text/css">
 		.button {
 			background-color: #4CAF50; /* Green */
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<script src="js/main.js"></script>
-	<button id="btn_1">Có, chắc chắn</button>
+	<button id="btn_1" onclick="btn1onclick()">Có, chắc chắn</button>
 	<button id="btn_2">Không, dĩ nhiên!</button>
 </body>
 </html>
