Add index.html file

--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Nothing At Here</title>
 	<link rel="stylesheet" href="style.css">
-	<style type="text/css">
-		.button {
-			background-color: #4CAF50; /* Green */
-			border: none;
-			color: white;
-			padding: 15px 32px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 16px;
-			}
-	</style>
+	
 </head>
 <body>
+	<p id="text"><strong>Bạn nghĩ bản thân mình có ngu không?</strong></p>
 	<script src="js/main.js"></script>
-	<button id="btn_1" onclick="btn1onclick()">Có, chắc chắn</button>
-	<button id="btn_2">Không, dĩ nhiên!</button>
+	<br>
+	<button class="button btn_1" onclick="btn1onclick()"><span id="main-text">Không, dĩ nhiên</span></button>
+	<button class="button btn_2" onclick="btn2onclick()">Có, chắc chắn</button>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<center><h3>Cách để troll người khác 1 cách dễ dàng <a href="https://youtu.be/dQw4w9WgXcQ">https://wiki.com/how-to-troll-easier/</a></h3></center>
 </body>
 </html>
