--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	
 </head>
 <body>
-	<p id="text"><strong>Bạn nghĩ bản thân mình có ngu không?</strong></p>
 	<script src="js/main.js"></script>
+	<p id="text"><strong>Bạn nghĩ bản thân mình có ngu không?</strong></p>
 	<br>
 	<button class="button btn_1" onclick="btn1onclick()"><span id="main-text">Không, dĩ nhiên</span></button>
 	<button class="button btn_2" onclick="btn2onclick()">Có, chắc chắn</button>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<center><h3>Cách để troll người khác 1 cách dễ dàng <a href="https://youtu.be/dQw4w9WgXcQ">https://wiki.com/how-to-troll-easier/</a></h3></center>
+	<center><h3>Cách để troll người khác 1 cách dễ dàng <a href="https://youtu.be/dQw4w9WgXcQ">https://wikihow.com/how-to-troll-easier/</a></h3></center>
 </body>
 </html>
