--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Iq Test</title>
+	<title>Studity Test</title>
 	<link rel="stylesheet" href="style.css">
 	
 </head>
 <body>
+	<center>
+		<div class="container">
+			<p id="text"><strong>Bạn nghĩ bản thân mình có ngu <p id="text_2" onclick="txtclick()"> không?</p></strong></p>
+			<br>
+			<button class="button btn_1" onclick="btn1onclick()"><span id="main-text">Không, dĩ nhiên</span></button>
+			<button class="button btn_2" onclick="btn2onclick()">Có, chắc chắn</button>
+	
+		</div>
+	</center>
 	<script src="js/main.js"></script>
-	<p id="text"><strong>Bạn nghĩ bản thân mình có ngu không?</strong></p>
-	<br>
-	<button class="button btn_1" onclick="btn1onclick()"><span id="main-text">Không, dĩ nhiên</span></button>
-	<button class="button btn_2" onclick="btn2onclick()">Có, chắc chắn</button>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<center><h3>Cách để troll người khác 1 cách dễ dàng <a href="https://youtu.be/dQw4w9WgXcQ">https://wikihow.com/how-to-troll-easier/</a></h3></center>
 </body>
