--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 	</center>
 	
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><p style="color: #FFFFFF;">This website is for entertainment purposes only</p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><p style="color: #FFFFFF;margin-left: 93%;font-size: 7px;">Programmed by D.V.Quang</p><br><br><br><br><br><br>
 	<center><h3>Cách để troll người khác 1 cách dễ dàng <a href="https://youtu.be/dQw4w9WgXcQ">https://wikihow.com/how-to-troll-easier/</a></h3></center>
 </body>
 </html>
