--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<div class="container">
 			<p id="text"><strong>Bạn nghĩ bản thân mình có ngu <p id="text_2" onclick="txtclick()"> không?</p></strong></p>
 			<br>
-			<button class="button btn_1" onclick="btn1onclick()"><span id="main-text">Không, dĩ nhiên</span></button>
-			<button class="button btn_2" onclick="btn2onclick()">Có, chắc chắn</button>
+			<button class="button btn_1" onclick="btn1onclick()"><span class="answer-text" id="main-text">Không, dĩ nhiên</span></button>
+			<button class="button btn_2" onclick="btn2onclick()"><span class="answer-text">Có, chắc chắn</span></button>
 	
 		</div>
 	</center>
 	
 	<br><br><br><br><br><br><p style="color: #FFFFFF;">This website is for entertainment purposes only</p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><p style="color: #FFFFFF;margin-left: 93%;font-size: 7px;">Programmed by D.V.Quang</p><br><br><br><br><br><br>
-	<center><h3>Cách để troll người khác 1 cách dễ dàng <a href="https://youtu.be/dQw4w9WgXcQ">https://wikihow.com/how-to-troll-easier/</a></h3></center>
+	<center><h3>Cách để troll người khác 1 cách dễ dàng <a href="https://youtu.be/dQw4w9WgXcQ" target="_blank">https://wikihow.com/how-to-troll-easier/</a></h3></center>
 </body>
 </html>
