--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Stupidity Test</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" type="image/jpg" href="icon.ico"/>
+	<link rel="shortcut icon" type="image/ico" href="icon.ico"/>
 	
 </head>
 <body>
