--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Stupidity Test</title>
+	<title>Something's Interesting Here</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" type="image/ico" href="icon.ico"/>
 	
