Add index.html file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Something's Interesting Here</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" type="image/ico" href="icon.ico"/>
+	<title>Something's Interesting Here</title>
 	
 </head>
 <body>
@@ -20,7 +20,7 @@
 		</div>
 	</center>
 	
-	<br><br><br><br><br><br><p style="color: #FFFFFF;">This website is for entertainment purposes only</p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><p style="color: #FFFFFF;margin-left: 93%;font-size: 7px;">Programmed by D.V.Quang</p><br><br><br><br><br><br>
+	<br><br><br><br><br><br><p style="color: #FFFFFF;">This website is for entertainment purposes only</p><br><p style="color: #FFFFFF;">Make sure you enjoy these things before access this website</p><br><br><br><br><br><br><br><br><br><br><br><br><br><p style="color: #FFFFFF;margin-left: 90%;font-size: 7px;">Programmed by D.V.Quang</p><br><br><br><br><br><br>
 	<center><h3>Cách để troll người khác 1 cách dễ dàng <a href="https://youtu.be/dQw4w9WgXcQ" target="_blank">https://wikihow.com/how-to-troll-easier/</a></h3></center>
 </body>
 </html>
