--- a/index.html
+++ b/index.html
@@ -9,18 +9,39 @@
 	
 </head>
 <body>
-	<script src="js/main.js"></script>
 	<center>
-		<div class="container">
-			<p id="text"><strong>Bạn nghĩ bản thân mình có ngu <p id="text_2" onclick="txtclick()"> không?</p></strong></p>
-			<br>
-			<button class="button btn_1" onclick="btn1onclick()"><span class="answer-text" id="main-text">Không, dĩ nhiên</span></button>
-			<button class="button btn_2" onclick="btn2onclick()"><span class="answer-text">Có, chắc chắn</span></button>
-	
+		<div>
+			<div class="container">
+				<p id="text"><strong>Bạn nghĩ bản thân mình có ngu <p id="text_2" onclick="txtclick()"> không?</p></strong></p>
+				<br>
+				<button class="button btn_1" onclick="btn1onclick()"><span class="answer-text" id="main-text">Không, dĩ nhiên</span></button>
+				<button class="button btn_2" onclick="btn2onclick()"><span class="answer-text">Có, chắc chắn</span></button>
+		
+			</div>
+
+			<div class="container_2">
+				<h3 id="text_3">Thế bạn nghĩ ngoại hình của bạn có ưa nhìn không?</h3>
+
+				<div>
+					<button class="link" id="btn_3" onclick="btn3onclick()"><span class="text_4">Chắc chắn rồi:))</span></button>
+					<a class="link" id="btn_4" onclick="linkonclick()"><span class="text_4">xấu lắm hic :((</span></a>
+				</div>
+
+			</div>
 		</div>
 	</center>
 	
-	<br><br><br><br><br><br><p style="color: #FFFFFF;">This website is for entertainment purposes only</p><br><p style="color: #FFFFFF;">Make sure you enjoy these things before access this website</p><br><br><br><br><br><br><br><br><br><br><br><br><br><p style="color: #FFFFFF;margin-left: 90%;font-size: 7px;">Programmed by D.V.Quang</p><br><br><br><br><br><br>
-	<center><h3>Cách để troll người khác 1 cách dễ dàng <a href="https://youtu.be/dQw4w9WgXcQ" target="_blank">https://wikihow.com/how-to-troll-easier/</a></h3></center>
+	<br><br><br><br><br><br>
+	
+	<div><p style="color: #FFFFFF;margin-left: 10px;">This website is for entertainment purposes only</p></div>
+	
+	<br><p style="color: #FFFFFF;">Make sure you enjoy these things before access this website</p><br><br><br><br><br><br><br><br><br><br><br><br><br><p style="color: #FFFFFF;margin-left: 90%;font-size: 7px;">Programmed by D.V.Quang</p><br><br><br><br><br><br>
+	<div class="container_3">
+		<center>
+			<h3>Cách để troll người khác 1 cách dễ dàng <a id="trollLink" target="_blank" onclick="link2onclick()">https://wikihow.com/how-to-troll-easier/</a></h3>
+
+		</center>
+	</div>
+	<script src="js/main.js"></script>
 </body>
 </html>
