--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
     "Sherlock Holmes.html",
     "Innocent American Wife strip-searched in public in an African Airport.html",
     "Power Divest Those  Who Do Not Have It.html",
+    "Casi Secret - RSW.html",
+    "Diane After Work - RSW.html",
+    "Janet Incentive Program - RSW.html",
+    "Holi Babysitting Job - RSW .html",
+    "The Princess Errant.html",
   ],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
     "Family_Tradition_Picture_Day_02gto02j.html",
