--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
     "Holi Babysitting Job - RSW .html",
     "The Princess Errant.html",
   ],
+  "Tami_Smithers": [
+    "The_Unintentional_Nudist.html",
+    "Home for Thanksgiving.html",
+    "The_Unintentional_Nudist_3.html",
+    "The_Unintentional_Nudist_4.html",
+    "The_Unintentional_Nudist_5.html",
+    "The_Unintentional_Nudist_6.html",
+    "The_Unintentional_Nudist_7.html",
+    "The_Unintentional_Nudist_8.html",
+    "The_Unintentional_Nudist_9.html",
+    "The_Unintentional_Nudist_10.html",
+    "The_Unintentional_Nudist_11.html",
+    "The_Unintentional_Nudist_12.html",
+    "The_Unintentional_Nudist_13.html",
+    "Tami_The_Naked_Freshman.html",
+    "Tami_Saves_Mei_Lin.html",
+    "Tami_Beethoven_1.html",
+    "Tami_Beethoven_2.html",
+    "Tami_Beethoven_3.html",
+    "Tami_Beethoven_4.html",
+    "Interview_With_The_Professor.html",
+  ],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
     "Family_Tradition_Picture_Day_02gto02j.html",
     "Family_Tradition_Picture_Day_02d_to_2e.html",
