--- a/Tami_Smithers/Interview_With_The_Professor.html
+++ b/Tami_Smithers/Interview_With_The_Professor.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html><head>
-<meta http-equiv="content-type" content="text/html;charset=UTF-8"><title>Back To School</title>
+<meta http-equiv="content-type" content="text/html;charset=UTF-8"><title>Interviews with the Professor</title>
 
 <meta name="Author" content="brhmsj">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@ td {
 
 </head>
 <body style="margin: 1em 7%; font-size: 140%; background-image: linear-gradient(90deg, #192154 0%, #000000 100%); font-family: monospace;" text="#cfcb88">
-<h1>The Unintentional Nudist: Home for Thanksgiving</h1>
+<h1>Interviews with the Professor</h1>
 <p><span style="font-weight: bold;">By <span style="font-family: inherit;">Donnylaja</span></span></p>
 
 <p>Copyright by Donnylaja, all rights reserved</p>
