--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
     "Tami_Beethoven_4.html",
     "Interview_With_The_Professor.html",
   ],
+  "Blanke_Schande": [
+    "Hyacinth_in_the_Mountains.html",
+    "Life_of_Corey.html",
+    "The_Problem_of_Grib.html",
+    "The_End_of_Blanke_Schande.html"
+  ],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
     "Family_Tradition_Picture_Day_02gto02j.html",
     "Family_Tradition_Picture_Day_02d_to_2e.html",
