--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
   <script>
     // Define the folder and file structure
     const repository = {
-  "From Outside": ["Lady Kathering The Christmas Case.html", 
+  "From Outside": [
+    "Mailgirl.html",
+    "Lady Kathering The Christmas Case.html", 
     "Uniform Concerns.html", 
     "The Theory of Nothing.html",
     "Thief Story.html",
