--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
     "Janet Incentive Program - RSW.html",
     "Holi Babysitting Job - RSW .html",
     "The Princess Errant.html",
+    "Red_Fannie_Annie.html",
+    "A_Firebug_Gets_Punished.html",
+    "Laundry_Day.html",
+    "Natural_Beauty.html",
+    "SOMA_Vestiphobia_Attorney.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
@@ -114,19 +119,20 @@
     "Tami_Beethoven_4.html",
     "Interview_With_The_Professor.html",
   ],
+  "A_Friend_Who_Cares": ["AFWC_A_Friend_Who_Cares_01.html","AFWC_A_Friend_Who_Cares_02.html","AFWC_A_Friend_Who_Cares_03.html","AFWC_A_Friend_Who_Cares_04.html","AFWC_A_Friend_Who_Cares_05.html","AFWC_A_Friend_Who_Cares_09to10.html","AFWC_A_Friend_Who_Cares_11.html","AFWC_A_Friend_Who_Cares_12.html","AFWC_A_Friend_Who_Cares_13.html","AFWC_A_Friend_Who_Cares_14.html","AFWC_A_Friend_Who_Cares_15.html","AFWC_A_Friend_Who_Cares_16.html","AFWC_A_Friend_Who_Cares_17.html","AFWC_A_Friend_Who_Cares_18.html", "AFWC_A_Friend_Who_Cares_19.html"],
   "Blanke_Schande": [
     "Hyacinth_in_the_Mountains.html",
     "Life_of_Corey.html",
     "The_Problem_of_Grib.html",
     "The_End_of_Blanke_Schande.html"
   ],
+  "Evacuees_Tale": ["Evacuees_Tale_01.html", "Evacuees_Tale_02.html", "Evacuees_Tale_03.html"],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
     "Family_Tradition_Picture_Day_02gto02j.html",
     "Family_Tradition_Picture_Day_02d_to_2e.html",
     "Family_Tradition_Picture_Day_01c_to_2c.html",
     "Family_Tradition_Picture_Day_01.html",
   ],
-  "Evacuees_Tale": ["Evacuees_Tale_01.html", "Evacuees_Tale_02.html", "Evacuees_Tale_03.html"],
   "Collaege_Girl_Kate": ["College_Girl_Kate_01.html", "College_Girl_Kate_02.html", "College_Girl_Kate_03.html", "College_Girl_Kate_04.html","College_Girl_Kate_05.html", "College_Girl_Kate_06.html", "College_Girl_Kate_07.html"],
   "Girls Don't Need Modesty": ["Girls_Dont_Need_Modesty_01.html", "Girls_Dont_Need_Modesty_02A.html", "Girls_Dont_Need_Modesty_02to03.html", "Girls_Dont_Need_Modesty_04.html", "Girls_Dont_Need_Modesty_05.html", "Lauren_Prentiss_Medical_Examination_01.html"],
   "Hannas_Embarrassing_Accident": ["Hannas_Embarrassing_Accident_01to03.html", "Hannas_Embarrassing_Accident_04to07.html", "Hannas_Embarrassing_Accident_08to12.html", "Hannas_Embarrassing_Accident_13to17.html"],
