--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     "A_Firebug_Gets_Punished.html",
     "Laundry_Day.html",
     "Natural_Beauty.html",
-    "SOMA_Vestiphobia_Attorney.html"
+    "SOMA_Vestiphobia_Attorney.html",
+    "Amy_and_the_Doctor.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
