--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     "Zoe Naked In School.html",
     "Rebekah the Helper's Union Member.html",
     "Naked and Unafraid.html",
-    "The Rent.html",
+    "The_Rent.html",
     "Princess Sara.html",
     "Saving a Relic.html",
     "KAT's Collection.html",
