--- a/index.html
+++ b/index.html
@@ -96,7 +96,16 @@
     "Laundry_Day.html",
     "Natural_Beauty.html",
     "SOMA_Vestiphobia_Attorney.html",
-    "Amy_and_the_Doctor.html"
+    "Amy_and_the_Doctor.html",
+    "The_Girl_with_no_Name.html",
+    "The_New_Girl.html",
+    "An_Innocent_Prank_Enf_story.html",
+    "A_Year_Of_Nudity.html",
+    "Naughty_Nice_and_Naked.html",
+    "Streak_of_Shame.html",
+    "Yukis_ENF_Office_Job.html",
+    "Word_of_Honor.html",
+    "Ninja_Training.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
