--- a/From Outside/A_Firebug_Gets_Punished.html
+++ b/From Outside/A_Firebug_Gets_Punished.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Fannie Annie - Part 1</title>
+    <title>A Firebug Gets Punished</title>
     <style>
         body {
             font-family: 'Georgia', serif;
