--- a/Tami_Smithers/The_Unintentional_Nudist_4.html
+++ b/Tami_Smithers/The_Unintentional_Nudist_4.html
@@ -1,45 +1,123 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
-<html><head>
-<meta http-equiv="content-type" content="text/html;charset=UTF-8"><title>November 27</title>
-
-<meta name="Author" content="brhmsj">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style type="text/css">
-	
-::selection {
-	color: #0B0E24;
-	background: #cfcb88;
-}
-
-div {
-	padding: 10px;
-}
-
-td {
- padding-left:40px;
- padding-right:0;
-}
-
-</style>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>November 27</title>
+  <style>
+    body {
+      font-family: 'Georgia', serif;
+      margin: 0;
+      padding: 0;
+      background: #FAF3DD;
+      color: #6D6875;
+      display: flex;
+    }
+    .sidebar {
+      width: 250px;
+      background: #FFD3B5;
+      color: #6D6875;
+      padding: 20px;
+      height: 100vh;
+      position: fixed;
+      left: 0;
+      top: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      overflow-y: auto;
+      transition: transform 0.3s ease;
+      box-sizing: border-box;
+    }
+    /* Hide scrollbar in Chrome, Safari, Opera */
+    .sidebar::-webkit-scrollbar {
+      display: none;
+    }
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+    .sidebar h2 {
+      margin-bottom: 20px;
+    }
+    .chapter-links a {
+      display: block;
+      color: #6D6875;
+      text-decoration: none;
+      margin: 10px 0;
+      font-size: 1.2rem;
+    }
+    .chapter-links a:hover {
+      text-decoration: underline;
+    }
+    .content {
+      margin-left: 270px;
+      padding: 40px;
+      max-width: 800px;
+    }
+    h1 {
+      text-align: center;
+      font-size: 2.5rem;
+      color: #2c3e50;
+    }
+    .synopsis {
+      background: #eaeaea;
+      padding: 15px;
+      border-left: 5px solid #2c3e50;
+      margin-bottom: 30px;
+    }
+    .story-content {
+      font-size: 1.3rem;
+      line-height: 1.8;
+    }
+    .footer {
+      margin-top: 30px;
+      text-align: center;
+    }
+    /* Mobile Styles */
+    @media (max-width: 768px) {
+      .sidebar {
+        transform: translateX(-100%);
+      }
+      .sidebar.open {
+        transform: translateX(0);
+      }
+      .content {
+        margin-left: 0;
+      }
+      #toggle-sidebar {
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        z-index: 1000;
+        background: #e3772d;
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+      }
+    }
+  </style>
 </head>
-<body style="margin: 1em 7%; font-size: 140%; background-image: linear-gradient(90deg, #192154 0%, #000000 100%); font-family: monospace;" text="#cfcb88">
-<h1>The Unintentional Nudist: November 27</h1>
-<p><span style="font-weight: bold;">By <span style="font-family: inherit;">Donnylaja</span></span></p>
-
-<p>Copyright by Donnylaja, all rights reserved</p>
-*
-* * * *<br><em>
-Caught by campus police on a sorority streaking dare her first week away at college -- brought in to the Dean -- the college is very strict about such things and the penalty is explusion -- she impulsively cooks up the excuse that nudity is her "religion" -- the Dean consults with the college lawyer -- doesn't want to risk a lawsuit for religious discrimination -- so the Dean lets her go -- but says adherence to her "religion" will be strictly monitored -- 
-</em>
-<br>
-* * * * *
-
-<!-- Story begins -->
-<div id="C1">
-<p lang="en-US"><span style="font-weight: bold; font-size: 1.2em;">ONESHOT</span><br> <br> <br>
-On this fine, sunny day, the Tuesday after Thanksgiving, in the library of a conservative but prestigious college, in a carrel tucked among the stacks, sat a hiding young woman without clothes named Tami Smithers, lost in thought.<br>
+<body>
+  <!-- Toggle button visible on mobile devices -->
+  <button id="toggle-sidebar">☰</button>
+  <div class="sidebar">
+    <h2>Chapters</h2>
+    <div class="chapter-links">
+      
+    </div>
+    <div style="height: 10px; display: block;"></div>
+  </div>
+  <div class="content">
+    <h1>The Unintentional Nudist IV</h1>
+    <div class="synopsis">
+      <strong>Synopsis:</strong>
+      <p id="intro">...</p>
+    </div>
+    <div class="story-content">
+      <h2 id="chapter-title">Chapter 1</h2>
+      <div id="chapter-content" style="text-align: justify;">
+        <p>
+        	On this fine, sunny day, the Tuesday after Thanksgiving, in the library of a conservative but prestigious college, in a carrel tucked among the stacks, sat a hiding young woman without clothes named Tami Smithers, lost in thought.<br>
 <br>
 She remembered how she must have appeared to the Intro to Sociology class, probably the biggest class on campus, when she busted in on them the morning before. There she was, facing them in full frontal exposure, almost proudly. Her metabolism had sped up greatly during her short walk through the blizzard and she was panting heavily, her flat tummy rising and falling as she looked up to the back rows to find an empty seat. Her whole body was flushed and now that she was back inside she felt hot and was actually beginning to sweat. Between her slightly parted legs, everyone could see the string of a tampon hanging from her lush pubic bush.<br>
 <br> 
@@ -204,11 +282,14 @@ Tami thought for a minute. Feeling the foundation crumbling beneath her she neve
 Wanda rearranged her coat and got up and moved her chair back to the next carrel. "Bye!" she said cheerfully, striding loudly back down the aisle in her heavy coat and boots as Tami looked at her receding back in pure shock.<br>
 <br> 
 Tami sat at her carrel looking down the aisle long after Wanda had left. After about ten minutes she slowly turned to her books. What a morning. I didn't get much work done, but a lot happened. She took out her diary and began to spill out her thoughts.
-</p></div><br><br><br><br>
-<!-- Story ends --><br>
-<br>
-<br>
-<br>
-<div style="text-align: center;"><span style="font-weight: bold;">(End of File)</span><br>
-</div>
-</body></html>
+
+        </p>
+      </div>
+    </div>
+    <div class="footer">
+      <!-- <p><a href="#" id="next-chapter">Next Chapter →</a></p> -->
+    </div>
+  </div>
+  
+</body>
+</html>
