--- a/Tami_Smithers/Home for Thanksgiving.html
+++ b/Tami_Smithers/Home for Thanksgiving.html
@@ -103,42 +103,42 @@
   <div class="sidebar">
     <h2>Chapters</h2>
     <div class="chapter-links">
-      <a href="#" onclick="loadChapter(1)">Chapter 1</a>
-      <a href="#" onclick="loadChapter(2)">Chapter 2</a>
-      <a href="#" onclick="loadChapter(3)">Chapter 3</a>
-      <a href="#" onclick="loadChapter(4)">Chapter 4</a>
-      <a href="#" onclick="loadChapter(5)">Chapter 5</a>
-      <a href="#" onclick="loadChapter(6)">Chapter 6</a>
-      <a href="#" onclick="loadChapter(7)">Chapter 7</a>
-      <a href="#" onclick="loadChapter(8)">Chapter 8</a>
-      <a href="#" onclick="loadChapter(9)">Chapter 9</a>
-      <a href="#" onclick="loadChapter(10)">Chapter 10</a>
-      <a href="#" onclick="loadChapter(11)">Chapter 11</a>
-      <a href="#" onclick="loadChapter(12)">Chapter 12</a>
-      <a href="#" onclick="loadChapter(13)">Chapter 13</a>
-      <a href="#" onclick="loadChapter(14)">Chapter 14</a>
-      <a href="#" onclick="loadChapter(15)">Chapter 15</a>
-      <a href="#" onclick="loadChapter(16)">Chapter 16</a>
-      <a href="#" onclick="loadChapter(17)">Chapter 17</a>
-      <a href="#" onclick="loadChapter(18)">Chapter 18</a>
-      <a href="#" onclick="loadChapter(19)">Chapter 19</a>
-      <a href="#" onclick="loadChapter(20)">Chapter 20</a>
-      <a href="#" onclick="loadChapter(21)">Chapter 21</a>
-      <a href="#" onclick="loadChapter(22)">Chapter 22</a>
-      <a href="#" onclick="loadChapter(23)">Chapter 23</a>
-      <a href="#" onclick="loadChapter(24)">Chapter 24</a>
-      <a href="#" onclick="loadChapter(25)">Chapter 25</a>
-      <a href="#" onclick="loadChapter(26)">Chapter 26</a>
-      <a href="#" onclick="loadChapter(27)">Chapter 27</a>
-      <a href="#" onclick="loadChapter(28)">Chapter 28</a>
-      <a href="#" onclick="loadChapter(29)">Chapter 29</a>
-      <a href="#" onclick="loadChapter(30)">Chapter 30</a>
-      <a href="#" onclick="loadChapter(31)">Chapter 31</a>
-      <a href="#" onclick="loadChapter(32)">Chapter 32</a>
-      <a href="#" onclick="loadChapter(33)">Chapter 33</a>
-      <a href="#" onclick="loadChapter(34)">Chapter 34</a>
-      <a href="#" onclick="loadChapter(35)">Chapter 35</a>
-      <a href="#" onclick="loadChapter(36)">Chapter 36</a>
+      <a href="#1" onclick="loadChapter(1)">Chapter 1</a>
+      <a href="#2" onclick="loadChapter(2)">Chapter 2</a>
+      <a href="#3" onclick="loadChapter(3)">Chapter 3</a>
+      <a href="#4" onclick="loadChapter(4)">Chapter 4</a>
+      <a href="#5" onclick="loadChapter(5)">Chapter 5</a>
+      <a href="#6" onclick="loadChapter(6)">Chapter 6</a>
+      <a href="#7" onclick="loadChapter(7)">Chapter 7</a>
+      <a href="#8" onclick="loadChapter(8)">Chapter 8</a>
+      <a href="#9" onclick="loadChapter(9)">Chapter 9</a>
+      <a href="#10" onclick="loadChapter(10)">Chapter 10</a>
+      <a href="#11" onclick="loadChapter(11)">Chapter 11</a>
+      <a href="#12" onclick="loadChapter(12)">Chapter 12</a>
+      <a href="#13" onclick="loadChapter(13)">Chapter 13</a>
+      <a href="#14" onclick="loadChapter(14)">Chapter 14</a>
+      <a href="#15" onclick="loadChapter(15)">Chapter 15</a>
+      <a href="#16" onclick="loadChapter(16)">Chapter 16</a>
+      <a href="#17" onclick="loadChapter(17)">Chapter 17</a>
+      <a href="#18" onclick="loadChapter(18)">Chapter 18</a>
+      <a href="#19" onclick="loadChapter(19)">Chapter 19</a>
+      <a href="#20" onclick="loadChapter(20)">Chapter 20</a>
+      <a href="#21" onclick="loadChapter(21)">Chapter 21</a>
+      <a href="#22" onclick="loadChapter(22)">Chapter 22</a>
+      <a href="#23" onclick="loadChapter(23)">Chapter 23</a>
+      <a href="#24" onclick="loadChapter(24)">Chapter 24</a>
+      <a href="#25" onclick="loadChapter(25)">Chapter 25</a>
+      <a href="#26" onclick="loadChapter(26)">Chapter 26</a>
+      <a href="#27" onclick="loadChapter(27)">Chapter 27</a>
+      <a href="#28" onclick="loadChapter(28)">Chapter 28</a>
+      <a href="#29" onclick="loadChapter(29)">Chapter 29</a>
+      <a href="#30" onclick="loadChapter(30)">Chapter 30</a>
+      <a href="#31" onclick="loadChapter(31)">Chapter 31</a>
+      <a href="#32" onclick="loadChapter(32)">Chapter 32</a>
+      <a href="#33" onclick="loadChapter(33)">Chapter 33</a>
+      <a href="#34" onclick="loadChapter(34)">Chapter 34</a>
+      <a href="#35" onclick="loadChapter(35)">Chapter 35</a>
+      <a href="#36" onclick="loadChapter(36)">Chapter 36</a>
     </div>
     <div style="height: 10px; display: block;"></div>
   </div>
@@ -258,7 +258,25 @@
     document.getElementById('toggle-sidebar').addEventListener('click', function() {
       document.querySelector('.sidebar').classList.toggle('open');
     });
-    loadChapter(1);
+    // On page load, check the URL hash and load the corresponding chapter.
+    window.addEventListener("load", function() {
+      const hash = window.location.hash;
+      const chapterIndex = parseInt(hash.substring(1));
+      if (chapterIndex && chapterIndex >= 1 && chapterIndex <= chapters.length) {
+        loadChapter(chapterIndex);
+      } else {
+        loadChapter(1);
+      }
+    });
+    
+    // Optionally, listen for hash changes to support browser back/forward navigation.
+    window.addEventListener("hashchange", function() {
+      const hash = window.location.hash;
+      const chapterIndex = parseInt(hash.substring(1));
+      if (chapterIndex && chapterIndex >= 1 && chapterIndex <= chapters.length) {
+        loadChapter(chapterIndex);
+      }
+    });
   </script>
 </body>
 </html>
