--- a/Tami_Smithers/The_Unintentional_Nudist.html
+++ b/Tami_Smithers/The_Unintentional_Nudist.html
@@ -103,26 +103,26 @@
   <div class="sidebar">
     <h2>Chapters</h2>
     <div class="chapter-links">
-      <a href="#" onclick="loadChapter(1)">Chapter 1</a>
-      <a href="#" onclick="loadChapter(2)">Chapter 2</a>
-      <a href="#" onclick="loadChapter(3)">Chapter 3</a>
-      <a href="#" onclick="loadChapter(4)">Chapter 4</a>
-      <a href="#" onclick="loadChapter(5)">Chapter 5</a>
-      <a href="#" onclick="loadChapter(6)">Chapter 6</a>
-      <a href="#" onclick="loadChapter(7)">Chapter 7</a>
-      <a href="#" onclick="loadChapter(8)">Chapter 8</a>
-      <a href="#" onclick="loadChapter(9)">Chapter 9</a>
-      <a href="#" onclick="loadChapter(10)">Chapter 10</a>
-      <a href="#" onclick="loadChapter(11)">Chapter 11</a>
-      <a href="#" onclick="loadChapter(12)">Chapter 12</a>
-      <a href="#" onclick="loadChapter(13)">Chapter 13</a>
-      <a href="#" onclick="loadChapter(14)">Chapter 14</a>
-      <a href="#" onclick="loadChapter(15)">Chapter 15</a>
-      <a href="#" onclick="loadChapter(16)">Chapter 16</a>
-      <a href="#" onclick="loadChapter(17)">Chapter 17</a>
-      <a href="#" onclick="loadChapter(18)">Chapter 18</a>
-      <a href="#" onclick="loadChapter(19)">Chapter 19</a>
-      <a href="#" onclick="loadChapter(20)">Chapter 20</a>
+      <a href="#1" onclick="loadChapter(1)">Chapter 1</a>
+      <a href="#2" onclick="loadChapter(2)">Chapter 2</a>
+      <a href="#3" onclick="loadChapter(3)">Chapter 3</a>
+      <a href="#4" onclick="loadChapter(4)">Chapter 4</a>
+      <a href="#5" onclick="loadChapter(5)">Chapter 5</a>
+      <a href="#6" onclick="loadChapter(6)">Chapter 6</a>
+      <a href="#7" onclick="loadChapter(7)">Chapter 7</a>
+      <a href="#8" onclick="loadChapter(8)">Chapter 8</a>
+      <a href="#9" onclick="loadChapter(9)">Chapter 9</a>
+      <a href="#10" onclick="loadChapter(10)">Chapter 10</a>
+      <a href="#11" onclick="loadChapter(11)">Chapter 11</a>
+      <a href="#12" onclick="loadChapter(12)">Chapter 12</a>
+      <a href="#13" onclick="loadChapter(13)">Chapter 13</a>
+      <a href="#14" onclick="loadChapter(14)">Chapter 14</a>
+      <a href="#15" onclick="loadChapter(15)">Chapter 15</a>
+      <a href="#16" onclick="loadChapter(16)">Chapter 16</a>
+      <a href="#17" onclick="loadChapter(17)">Chapter 17</a>
+      <a href="#18" onclick="loadChapter(18)">Chapter 18</a>
+      <a href="#19" onclick="loadChapter(19)">Chapter 19</a>
+      <a href="#20" onclick="loadChapter(20)">Chapter 20</a>
     </div>
     <div style="height: 10px; display: block;"></div>
   </div>
@@ -130,12 +130,12 @@
     <!-- <h1>A Firebug Gets Punished</h1> -->
     <div class="synopsis">
       <strong>Synopsis:</strong>
-      <p id="intro">In an old fantasy world, a firebug gets punished with ENF...</p>
+      <p id="intro">Bare into the Night...</p>
     </div>
     <div class="story-content">
       <h2 id="chapter-title">Chapter 1</h2>
       <div id="chapter-content" style="text-align: justify;">
-        <p>
+        <p id="6">
 Tami was away for home and family for the first time in her life.  She was a pretty girl of five feet six with shoulder-length dark red hair.  She had been on the gymnastics team in high school until her junior year.  At that time her flat chest had developed into a pair of firm 36C's over the course of the spring.  She had been slow to adjust to her changing body and had sprained her ankle while doing a dismount from the uneven bars.  She had survived the injury, but put on a few pounds in all the wrong places.  Strenuous aerobics had trimmed her down and firmed her up during her senior year.  In college she enjoyed the number of male heads that she turned as she moved about the campus.<br>
 <br>
 It all started as a college prank.  One of the senior girls, Wanda, had dared Tami and a few of the other freshman girls to streak passed the student union at 10:00 PM.  Tami felt naughty and giggled as she accepted the dare.<br>
@@ -265,6 +265,26 @@ Tami waited several minutes until the voices had faded before working her way ba
     // Toggle sidebar on mobile devices
     document.getElementById('toggle-sidebar').addEventListener('click', function() {
       document.querySelector('.sidebar').classList.toggle('open');
+    });
+
+    // On page load, check the URL hash and load the corresponding chapter.
+    window.addEventListener("load", function() {
+      const hash = window.location.hash;
+      const chapterIndex = parseInt(hash.substring(1));
+      if (chapterIndex && chapterIndex >= 1 && chapterIndex <= chapters.length) {
+        loadChapter(chapterIndex);
+      } else {
+        loadChapter(1);
+      }
+    });
+    
+    // Optionally, listen for hash changes to support browser back/forward navigation.
+    window.addEventListener("hashchange", function() {
+      const hash = window.location.hash;
+      const chapterIndex = parseInt(hash.substring(1));
+      if (chapterIndex && chapterIndex >= 1 && chapterIndex <= chapters.length) {
+        loadChapter(chapterIndex);
+      }
     });
   </script>
 </body>
