--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
-    "Home for Thanksgiving.html",
+    "Home_for_Thanksgiving.html",
     "The_Unintentional_Nudist_3.html",
     "The_Unintentional_Nudist_4.html",
     "The_Unintentional_Nudist_5.html",
