--- a/Tami_Smithers/The_Unintentional_Nudist_4.html
+++ b/Tami_Smithers/The_Unintentional_Nudist_4.html
@@ -9,14 +9,15 @@
       font-family: 'Georgia', serif;
       margin: 0;
       padding: 0;
-      background: #FAF3DD;
-      color: #6D6875;
+      background: #faf3dd;
+      color: #6d6875;
       display: flex;
+      transition: background-color 0.5s ease, color 0.5s ease;
     }
     .sidebar {
       width: 250px;
-      background: #FFD3B5;
-      color: #6D6875;
+      background: #ffd3b5;
+      color: #6d6875;
       padding: 20px;
       height: 100vh;
       position: fixed;
@@ -26,7 +27,7 @@
       flex-direction: column;
       align-items: center;
       overflow-y: auto;
-      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, background-color 0.5s ease, color 0.5s ease;
       box-sizing: border-box;
     }
     /* Hide scrollbar in Chrome, Safari, Opera */
@@ -41,10 +42,11 @@
     }
     .chapter-links a {
       display: block;
-      color: #6D6875;
+      color: #6d6875;
       text-decoration: none;
       margin: 10px 0;
       font-size: 1.2rem;
+      transition: color 0.5s ease;
     }
     .chapter-links a:hover {
       text-decoration: underline;
@@ -53,17 +55,20 @@
       margin-left: 270px;
       padding: 40px;
       max-width: 800px;
+      transition: background-color 0.5s ease, color 0.5s ease;
     }
     h1 {
       text-align: center;
       font-size: 2.5rem;
       color: #2c3e50;
+      transition: color 0.5s ease;
     }
     .synopsis {
       background: #eaeaea;
       padding: 15px;
       border-left: 5px solid #2c3e50;
       margin-bottom: 30px;
+      transition: background-color 0.5s ease, border-left-color 0.5s ease;
     }
     .story-content {
       font-size: 1.3rem;
@@ -89,12 +94,50 @@
         top: 20px;
         left: 20px;
         z-index: 1000;
-        background: #e3772d;
+        background: #ffd3b5;
         border: none;
         padding: 10px;
         cursor: pointer;
       }
+    
     }
+    #toggle-dark-theme {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1000;
+      background: #ffd3b5;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+    }
+    /* Dark theme styles with transitions */
+    .dark-theme {
+      background: #2c2c2c;
+      color: #e0e0e0;
+    }
+    .dark-theme .sidebar {
+      background: #444;
+      color: #e0e0e0;
+    }
+    .dark-theme .chapter-links a {
+      color: #e0e0e0;
+    }
+    .dark-theme h1 {
+      color: #fff;
+    }
+    .dark-theme .synopsis {
+      background: #555;
+      border-left-color: #fff;
+    }
+  </style>
+</head>
+<body>
+  <!-- Toggle button for sidebar on mobile devices -->
+  <button id="toggle-sidebar">☰</button>
+  <!-- Toggle button for dark theme -->
+  <button id="toggle-dark-theme">🌙</button>
+
   </style>
 </head>
 <body>
@@ -290,6 +333,12 @@ Tami sat at her carrel looking down the aisle long after Wanda had left. After a
       <!-- <p><a href="#" id="next-chapter">Next Chapter →</a></p> -->
     </div>
   </div>
+  <script type="text/javascript">
+    // Toggle dark theme on click of the dark theme button
+    document.getElementById('toggle-dark-theme').addEventListener('click', function() {
+    document.body.classList.toggle('dark-theme');
+    });
+  </script>
   
 </body>
 </html>
