--- a/index.html
+++ b/index.html
@@ -61,16 +61,17 @@
     "Lady Kathering The Christmas Case.html", 
     "Uniform Concerns.html", 
     "The Theory of Nothing.html",
+    "The_Naked_Countess.html",
     "Thief Story.html",
     "The Lesson.html",
     "A Mistress And a Little Slave.html",
     "Strange Days.html",
     "Dora's Naked Dare.html",
-    "Charmain, the Naked Maid.html",
+    "Charmain_the_Naked_Maid.html",
     "Monkey And The Princess.html",
     "A Very Merry Mailgirls XMas.html",
     "Jack The Stripper And The Wedding.html",
-    "Life Among the Mailgirls.html",
+    "Life_Among_the_Mailgirls.html",
     "Kelly the Servant.html",
     "Penny - Her Bad Dream and What Followed.html",
     "Zoe Naked In School.html",
@@ -105,7 +106,8 @@
     "Streak_of_Shame.html",
     "Yukis_ENF_Office_Job.html",
     "Word_of_Honor.html",
-    "Ninja_Training.html"
+    "Ninja_Training.html",
+    "Jenny_Baker_in_ADP.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
@@ -131,10 +133,7 @@
   ],
   "A_Friend_Who_Cares": ["AFWC_A_Friend_Who_Cares_01.html","AFWC_A_Friend_Who_Cares_02.html","AFWC_A_Friend_Who_Cares_03.html","AFWC_A_Friend_Who_Cares_04.html","AFWC_A_Friend_Who_Cares_05.html","AFWC_A_Friend_Who_Cares_09to10.html","AFWC_A_Friend_Who_Cares_11.html","AFWC_A_Friend_Who_Cares_12.html","AFWC_A_Friend_Who_Cares_13.html","AFWC_A_Friend_Who_Cares_14.html","AFWC_A_Friend_Who_Cares_15.html","AFWC_A_Friend_Who_Cares_16.html","AFWC_A_Friend_Who_Cares_17.html","AFWC_A_Friend_Who_Cares_18.html", "AFWC_A_Friend_Who_Cares_19.html"],
   "Blanke_Schande": [
-    "Hyacinth_in_the_Mountains.html",
-    "Life_of_Corey.html",
-    "The_Problem_of_Grib.html",
-    "The_End_of_Blanke_Schande.html"
+    "Hyacinth_Buddy.html",
   ],
   "Evacuees_Tale": ["Evacuees_Tale_01.html", "Evacuees_Tale_02.html", "Evacuees_Tale_03.html"],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
