--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
     "Yukis_ENF_Office_Job.html",
     "Word_of_Honor.html",
     "Ninja_Training.html",
-    "Jenny_Baker_in_ADP.html"
+    "Jenny_Baker_in_ADP.html",
+    "Living_in_a_Nudist_House.html",
+    "Chez_Louise.html",
+    "Lucina_Masked_Streaker.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
