--- a/From Outside/Laundry_Day.html
+++ b/From Outside/Laundry_Day.html
@@ -114,7 +114,7 @@
         <h1 id="chapter-title">Chapter 1</h1>
         <div class="synopsis">
             <strong>Synopsis:</strong>
-            <p>In a small town, young Annie finds herself tangled in a mysterious adventure that will change her life forever...</p>
+            <p>Two Girls Decide To Wash All Of Their Clothes - In Public.<br>[Unfortunately inspired by current events in my personal life, 'Laundry Day' is a quick ENF/CFNF story I wrote to pass the time as I waited for a repair man to turn up. As always please feel free to leave any comments, feedback, or story ideas down below. Enjoy!]</p>
         </div>
         <div class="story-content" id="chapter-content">
             <p>
