--- a/index.html
+++ b/index.html
@@ -58,40 +58,40 @@
     const repository = {
   "From Outside": [
     "Mailgirl.html",
-    "Lady Kathering The Christmas Case.html", 
-    "Uniform Concerns.html", 
-    "The Theory of Nothing.html",
+    "Lady_Kathering_The_Christmas_Case.html", 
+    "Uniform_Concerns.html", 
+    "The_Theory_of_Nothing.html",
     "The_Naked_Countess.html",
-    "Thief Story.html",
-    "The Lesson.html",
-    "A Mistress And a Little Slave.html",
+    "Thief_Story.html",
+    "The_Lesson.html",
+    "A_Mistress_And_a_Little_Slave.html",
     "Strange_Days.html",
-    "Dora's Naked Dare.html",
+    "Dora's_Naked_Dare.html",
     "Charmain_the_Naked_Maid.html",
-    "Monkey And The Princess.html",
-    "A Very Merry Mailgirls XMas.html",
+    "Monkey_And_The_Princess.html",
+    "A_Very_Merry_Mailgirls_XMas.html",
     "Jack The Stripper And The Wedding.html",
     "Life_Among_the_Mailgirls.html",
-    "Kelly the Servant.html",
-    "Penny - Her Bad Dream and What Followed.html",
-    "Zoe Naked In School.html",
-    "Rebekah the Helper's Union Member.html",
-    "Naked and Unafraid.html",
+    "Kelly_the_Servant.html",
+    "Penny_-_Her_Bad_Dream_and_What_Followed.html",
+    "Zoe_Naked_In_School.html",
+    "Rebekah_the_Helper's_Union_Member.html",
+    "Naked_and_Unafraid.html",
     "The_Rent.html",
-    "Princess Sara.html",
+    "Princess_Sara.html",
     "Saving_a_Relic.html",
-    "KAT's Collection.html",
-    "Soccer Naked.html",
-    "Clementine Dejesus by Linda Bare.html",
-    "The New Regime.html",
-    "Sherlock Holmes.html",
-    "Innocent American Wife strip-searched in public in an African Airport.html",
-    "Power Divest Those  Who Do Not Have It.html",
-    "Casi Secret - RSW.html",
-    "Diane After Work - RSW.html",
-    "Janet Incentive Program - RSW.html",
-    "Holi Babysitting Job - RSW .html",
-    "The Princess Errant.html",
+    "KAT's_Collection.html",
+    "Soccer_Naked.html",
+    "Clementine_Dejesus_by_Linda_Bare.html",
+    "The_New_Regime.html",
+    "Sherlock_Holmes.html",
+    "Innocent_American_Wife_strip-searched_in_public_in_an_African_Airport.html",
+    "Power_Divest_Those_Who_Do_Not_Have_It.html",
+    "Casi_Secret_-_RSW.html",
+    "Diane_After_Work_-_RSW.html",
+    "Janet_Incentive_Program_-_RSW.html",
+    "Holi_Babysitting_Job_-_RSW.html",
+    "The_Princess_Errant.html",
     "Red_Fannie_Annie.html",
     "A_Firebug_Gets_Punished.html",
     "The_ENF_Catcher.html",
@@ -111,7 +111,8 @@
     "Jenny_Baker_in_ADP.html",
     "Living_in_a_Nudist_House.html",
     "Chez_Louise.html",
-    "Lucina_Masked_Streaker.html"
+    "Lucina_Masked_Streaker.html",
+    "Unintentional.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
@@ -192,7 +193,9 @@
       files.forEach((file) => {
         const fileItem = document.createElement("li");
         fileItem.className = "file";
-        fileItem.innerHTML = `<a href="${baseFolder}/${folderName}/${file}" target="_blank">${file.replaceAll('_',' ')}</a>`;
+        file = file.replaceAll('_',' ');
+        file = file.replaceAll('.html','');
+        fileItem.innerHTML = `<a href="${baseFolder}/${folderName}/${file}" target="_blank">${file}</a>`;
         fileListForFolder.appendChild(fileItem);
       });
 
