--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
     "Living_in_a_Nudist_House.html",
     "Chez_Louise.html",
     "Lucina_Masked_Streaker.html",
-    "Unintentional.html"
+    "Unintentional.html",
+    "Ponygirl.html",
+    "Naturally_Nora.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
