--- a/From Outside/Saving_a_Relic.html
+++ b/From Outside/Saving_a_Relic.html
@@ -5,6 +5,11 @@
 <meta name="description" content="Story published in the Forced Nudity Archive. This archive contains stories about the forced nudity of minors.">
 <meta name="Author" content="PatrickNaked">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style type="text/css">
+	article {
+		text-align: justify;
+	}
+</style>
 </head>
 <body style="margin: 1em 7%; font-family: system-ui;"; bgcolor="#1F262D"; text="#F1F1F1">
 <h1 style="text-align: center;">Saving a Relic</h1>
@@ -44,7 +49,6 @@ AUTHOR’S NOTE: NeyKid originally wrote this story in 2019, now going by dirtyd
 <article id="c1">
 
 <h2>Chapter 1</h2>
-
 
 <p>Finally, my second year of college was done, and I planned to spend all summer doing nothing. I wanted to be completely lazy, hang about the house, maybe go to a few parties, or go to the beach. So on this particular Saturday morning, I went around garage sales and antique shops, another one of my interests, to look for something special. I saw another garage sale on the way home, so I had to pull over to check it out. As I perused through the items, I saw this amazing bracelet. I was strangely drawn to it but could not put my finger on why. It shone like it had an inner light, an energy that drew me to it.</p>
 
