--- a/From Outside/Naked_and_Unafraid.html
+++ b/From Outside/Naked_and_Unafraid.html
@@ -7,6 +7,7 @@
 <meta name="description" content="Story published in the Forced Nudity Archive. This archive contains stories about the forced nudity of minors.">
 <style type="text/css">
 a:hover {color: black; text-decoration: none;}
+article {text-align: justify;}
 </style>
 </head>
 <body style="margin: 1em 7%;font-family: Consolas;"; bgcolor="#1F2021"; text="#799BBF">
