--- a/From Outside/Mailgirl.html
+++ b/From Outside/Mailgirl.html
@@ -4,6 +4,7 @@
 
 <meta name="Author" content="NAMB">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/x-icon" href="book.png">
 </head>
 <body style="margin: 1em 7%; font-size: 150%; font-family: monospace; font-style: oblique; background-image: linear-gradient(90deg, #15202F 0%, #313C4C 100%);" text="#4ECBC1">
 <div style="text-align: center; font-family: inherit; font-size: 2em; user-select: none;">
