--- a/From Outside/The_Princess_Errant.html
+++ b/From Outside/The_Princess_Errant.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Princess Errant</title>
+  
+  <link rel="icon" type="image/x-icon" href="book.png">
+
   <style>
     /* Reset & Base Styles */
     * { margin: 0; padding: 0; box-sizing: border-box; }
