--- a/From Outside/For_the_Science.html
+++ b/From Outside/For_the_Science.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charmain, the Naked Maid</title>
+    <title>For the Science</title>
+    <link rel="icon" type="image/x-icon" href="book.png">
+
     <style>
         body {
             font-family: 'Georgia', serif;
