--- a/From Outside/Living_in_a_Nudist_House.html
+++ b/From Outside/Living_in_a_Nudist_House.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title> Living in a Nudist House</title>
+  
+  <link rel="icon" type="image/x-icon" href="book.png">
+
   <style>
     /* Global Reset & Base Styles */
     * { box-sizing: border-box; margin: 0; padding: 0; }
