--- a/From Outside/Ninja_Training.html
+++ b/From Outside/Ninja_Training.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naughty, Nice, and Naked</title>
+
+    <link rel="icon" type="image/x-icon" href="book.png">
+
     <style>
         body {
             font-family: 'Arial', sans-serif;
