--- a/From Outside/Penny_-_Her_Bad_Dream_and_What_Followed.html
+++ b/From Outside/Penny_-_Her_Bad_Dream_and_What_Followed.html
@@ -7,6 +7,7 @@
 <meta name="description" content="Story published in the Forced Nudity Archive. This archive contains stories about the forced nudity of minors.">
 <style type="text/css">
 a:hover {text-decoration: none;}
+article {text-align: justify;}
 </style>
 </head>
 <body style="margin: 1em 7%; font-family: OCR A Std, monospace;"; bgcolor="#1B1317"; text="#B1ECFF">
