--- a/From Outside/Red_Fannie_Annie.html
+++ b/From Outside/Red_Fannie_Annie.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Fannie Annie - Part 1</title>
+    <link rel="icon" type="image/x-icon" href="book.png">
     <style>
         body {
             font-family: 'Georgia', serif;
