--- a/From Outside/Sherlock_Holmes.html
+++ b/From Outside/Sherlock_Holmes.html
@@ -1,15 +1,12 @@
-<!-- 
-
-
- -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sherlock Holmes - Mystery Read</title>
+
+    <link rel="icon" type="image/x-icon" href="book.png">
+
     <style>
         body {
             font-family: 'Courier New', monospace;
