--- a/From Outside/The_Girl_with_no_Name.html
+++ b/From Outside/The_Girl_with_no_Name.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Girl with No Name</title>
+
+    <link rel="icon" type="image/x-icon" href="book.png">
+
     <style>
         body {
             font-family: 'Courier New', monospace;
