--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
-      font-size: 1.5em;
+      font-size: clamp(0.5rem, 2vw, 3.5rem);
+      align-items: center;
     }
 
     ul {
       list-style-type: none;
-      padding-left: 20px;
+/*      padding-left: 20px;*/
+      align-self: center;
     }
 
     .folder {
@@ -115,7 +117,8 @@
     "Unintentional.html",
     "Ponygirl.html",
     "Naturally_Nora.html",
-    "Queenfall.html"
+    "Queenfall.html",
+    "Adventure_in_the_Willows",
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
