--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
     "Ponygirl.html",
     "Naturally_Nora.html",
     "Queenfall.html",
-    "Adventure_in_the_Willows",
+    "Adventure_in_the_Willows.html",
+    "A_beginning_of_A_Ponygirl.html",
+    "The_Bath_Towel.html",
+    "Trisha_the_Terrible.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
