--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
   "Lias_New_Reality": ["Lias_New_Reality_01to04.html", "Lias_New_Reality_05to07.html", "Lias_New_Reality_08.html", "Lias_New_Reality_09to10.html", "Lias_New_Reality_11.html", "Lias_New_Reality_12.html", "Lias_New_Reality_13.html", "Lias_New_Reality_14to15.html", "Lias_New_Reality_16.html"],
   "NAKED_Naked_and_Abashed_Kids": ["NAKED_Naked_and_Abashed_Kids_01.html", "NAKED_Naked_and_Abashed_Kids_02.html", "NAKED_Naked_and_Abashed_Kids_03.html", "NAKED_Naked_and_Abashed_Kids_04.html", "NAKED_Naked_and_Abashed_Kids_05.html", "NAKED_Naked_and_Abashed_Kids_06.html", "NAKED_Naked_and_Abashed_Kids_07.html", "NAKED_Naked_and_Abashed_Kids_08.html", "NAKED_Naked_and_Abashed_Kids_09.html", "NAKED_Naked_and_Abashed_Kids_10.html", "NAKED_Naked_and_Abashed_Kids_11.html"],
   "Old_Fashioned_Family": ["Old_Fashioned_Family_01to02.html", "Old_Fashioned_Family_03to04.html", "Old_Fashioned_Family_05to07.html"],
+  "The_New_Rules": [
+    "Fort_of_Fantasy.html",
+    "The_New_Rules.html"
+  ],
   "Oneshot": ["Enjoying_View_01to02.html",
     "Little_Susies_Suppository_Ordeal.html",
     "Lilys_Embarrassing_Punishment.html",
@@ -174,7 +178,13 @@
     "Summer_That_Changed_Everything_01to07.html"],
   "Playing_Doctor": ["Playing_Doctor_01to02.html", "Playing_Doctor_03to04.html", "Playing_Doctor_05.html"],
   "Red_Fannie_Annie": ["Red_Fannie_Annie_1.html", "Red_Fannie_Annie_2.html"],
-  "The_Wrong_Slipper": ["The_Wrong_Slipper_01.html", "The_Wrong_Slipper_02.html", "The_Wrong_Slipper_03.html"]
+  "The_Wrong_Slipper": ["The_Wrong_Slipper_01.html", "The_Wrong_Slipper_02.html", "The_Wrong_Slipper_03.html"],
+  "Temple_of_Venus": ["Temple_of_Venus_01.html", "Temple_of_Venus_02to03.html"],
+  "Misty_Jones": [
+    "Girlfriend's_Arrest.html", 
+    "Girlfriend's_Arrest_2.html", 
+    "The_Halloween_Costume.html", 
+    "Caught_and_Punished.html"]
 } ;
         const baseFolder = "."; // Base folder path
     const fileList = document.getElementById("file-list");
