--- a/From Outside/Adventure_in_the_Willows.html
+++ b/From Outside/Adventure_in_the_Willows.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adventure in the Willows</title>
+  <link rel="icon" type="image/x-icon" href="book.png">
   <style>
     :root {
       --green: #67c26b;
