--- a/Tami_Smithers/Tami_Beethoven_3.html
+++ b/Tami_Smithers/Tami_Beethoven_3.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Red Fannie Annie - Part 1</title>
+  <title>Tami Beethoven 3</title>
+  <link rel="icon" type="image/x-icon" href="book.png">
   <style>
     body {
       font-family: 'Georgia', serif;
