--- a/Tami_Smithers/The_Unintentional_Nudist_8.html
+++ b/Tami_Smithers/The_Unintentional_Nudist_8.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Journal of David Sutcliffe</title>
+  <link rel="icon" type="image/x-icon" href="book.png">
   <style>
     body {
       font-family: 'Georgia', serif;
