--- a/The_New_Rules/The_New_Rules.html
+++ b/The_New_Rules/The_New_Rules.html
@@ -89,6 +89,8 @@
       border-radius: 12px;
       background: rgba(255, 255, 255, 0.6);
       backdrop-filter: blur(8px);
+      text-align: justify;
+      font-weight: bold;
     }
 
     body.dark main {
