--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     "Red_Fannie_Annie.html",
     "A_Firebug_Gets_Punished.html",
     "The_ENF_Catcher.html",
+    "Legends_Of_The_Fel.html",
     "Laundry_Day.html",
     "Natural_Beauty.html",
     "SOMA_Vestiphobia_Attorney.html",
