--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
     "Adventure_in_the_Willows.html",
     "A_beginning_of_A_Ponygirl.html",
     "The_Bath_Towel.html",
-    "Trisha_the_Terrible.html"
+    "Trisha_the_Terrible.html",
+    "I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
