--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     "A_beginning_of_A_Ponygirl.html",
     "The_Bath_Towel.html",
     "Trisha_the_Terrible.html",
+    "Legalised_Slavery.html",
     "I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html"
   ],
   "Tami_Smithers": [
@@ -146,6 +147,15 @@
     "Tami_Beethoven_3.html",
     "Tami_Beethoven_4.html",
     "Interview_With_The_Professor.html",
+  ],
+  "SliceReality_Mailgirl's_Stories": [
+    "Mailgirls_-_Easter_'Mailbunny'.html",
+    "Mailgirls_-_Flight_Duty.html",
+    "Mailgirls_-_Program_Expansion.html",
+    "Mailgirls_-_Working_Late_for_Christmas.html",
+    "The_Mailgirl_Movie_-_Red_Carpet.html",
+    "Mailgirls_-_Basement_Dorm.html",
+    "Mailgirls_-_Trip.html",
   ],
   "A_Friend_Who_Cares": ["AFWC_A_Friend_Who_Cares_01.html","AFWC_A_Friend_Who_Cares_02.html","AFWC_A_Friend_Who_Cares_03.html","AFWC_A_Friend_Who_Cares_04.html","AFWC_A_Friend_Who_Cares_05.html","AFWC_A_Friend_Who_Cares_09to10.html","AFWC_A_Friend_Who_Cares_11.html","AFWC_A_Friend_Who_Cares_12.html","AFWC_A_Friend_Who_Cares_13.html","AFWC_A_Friend_Who_Cares_14.html","AFWC_A_Friend_Who_Cares_15.html","AFWC_A_Friend_Who_Cares_16.html","AFWC_A_Friend_Who_Cares_17.html","AFWC_A_Friend_Who_Cares_18.html", "AFWC_A_Friend_Who_Cares_19.html"],
   "Blanke_Schande": [
@@ -177,7 +187,9 @@
     "Babysitting_Em_01.html",
     "Child_Protective_Court.html",
     "Failure_To_Communicate.html",
-    "Summer_That_Changed_Everything_01to07.html"],
+    "Summer_That_Changed_Everything_01to07.html",
+    "TAE_Tiffany_Anson_Exposed.html",
+    ],
   "Playing_Doctor": ["Playing_Doctor_01to02.html", "Playing_Doctor_03to04.html", "Playing_Doctor_05.html"],
   "Red_Fannie_Annie": ["Red_Fannie_Annie_1.html", "Red_Fannie_Annie_2.html"],
   "The_Wrong_Slipper": ["The_Wrong_Slipper_01.html", "The_Wrong_Slipper_02.html", "The_Wrong_Slipper_03.html"],
