--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     "Uniform_Concerns.html", 
     "The_Theory_of_Nothing.html",
     "The_Naked_Countess.html",
+    "The_Naked_Countess_II.html",
     "Thief_Story.html",
     "The_Lesson.html",
     "A_Mistress_And_a_Little_Slave.html",
@@ -124,6 +125,10 @@
     "The_Bath_Towel.html",
     "Trisha_the_Terrible.html",
     "Legalised_Slavery.html",
+    "The_Goblin_Whisperer_and_her_Ponygirl.html",
+    "Helen's_Ordeal.html",
+    "Spanish_Donkey.html",
+    "The_Law_of_private_ground.html",
     "I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html"
   ],
   "Tami_Smithers": [
@@ -160,6 +165,12 @@
   "A_Friend_Who_Cares": ["AFWC_A_Friend_Who_Cares_01.html","AFWC_A_Friend_Who_Cares_02.html","AFWC_A_Friend_Who_Cares_03.html","AFWC_A_Friend_Who_Cares_04.html","AFWC_A_Friend_Who_Cares_05.html","AFWC_A_Friend_Who_Cares_09to10.html","AFWC_A_Friend_Who_Cares_11.html","AFWC_A_Friend_Who_Cares_12.html","AFWC_A_Friend_Who_Cares_13.html","AFWC_A_Friend_Who_Cares_14.html","AFWC_A_Friend_Who_Cares_15.html","AFWC_A_Friend_Who_Cares_16.html","AFWC_A_Friend_Who_Cares_17.html","AFWC_A_Friend_Who_Cares_18.html", "AFWC_A_Friend_Who_Cares_19.html"],
   "Blanke_Schande": [
     "Hyacinth_Buddy.html",
+  ],
+  "BDSMLibrary": [
+    "Helen's_Ordeal.html",
+    "Spanish_Donkey.html",
+    "The_Law_of_private_ground.html",
+    "Office_Screw_Up.html",
   ],
   "Evacuees_Tale": ["Evacuees_Tale_01.html", "Evacuees_Tale_02.html", "Evacuees_Tale_03.html"],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
