--- a/From Outside/Naturally_Nora.html
+++ b/From Outside/Naturally_Nora.html
@@ -18,7 +18,7 @@
 
     body {
       margin: 0;
-      font-family: 'Georgia', serif;
+      font-family: 'Merriwether', serif;
       background: var(--paper-light);
       color: var(--ink-light);
       transition: background 0.5s, color 0.5s;
