--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
     "Dora's_Naked_Dare.html",
     "Charmain_the_Naked_Maid.html",
     "Monkey_And_The_Princess.html",
-    "A_Very_Merry_Mailgirls_XMas.html",
     "Jack The Stripper And The Wedding.html",
-    "Life_Among_the_Mailgirls.html",
     "Kelly_the_Servant.html",
     "Penny_-_Her_Bad_Dream_and_What_Followed.html",
     "Zoe_Naked_In_School.html",
@@ -129,7 +127,15 @@
     "Helen's_Ordeal.html",
     "Spanish_Donkey.html",
     "The_Law_of_private_ground.html",
-    "I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html"
+    "I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html",
+    "How_Sarah_Became_a_Nudist.html",
+  ],
+  "Mailgirl": [
+    "Mailgirl.html",
+    "A_Very_Merry_Mailgirls_XMas.html",
+    "Life_Among_the_Mailgirls.html",
+    "Adventures_of_a_Mailgirl.html"
+
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
