--- a/index.html
+++ b/index.html
@@ -124,11 +124,9 @@
     "Trisha_the_Terrible.html",
     "Legalised_Slavery.html",
     "The_Goblin_Whisperer_and_her_Ponygirl.html",
-    "Helen's_Ordeal.html",
-    "Spanish_Donkey.html",
-    "The_Law_of_private_ground.html",
     "I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html",
     "How_Sarah_Became_a_Nudist.html",
+    "Nude_World_Order.html"
   ],
   "Mailgirl": [
     "Mailgirl.html",
@@ -177,6 +175,7 @@
     "Spanish_Donkey.html",
     "The_Law_of_private_ground.html",
     "Office_Screw_Up.html",
+    "Allie_and_Nicole.html"
   ],
   "Evacuees_Tale": ["Evacuees_Tale_01.html", "Evacuees_Tale_02.html", "Evacuees_Tale_03.html"],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
